--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,6 +131,13 @@ nav a.active{
   box-shadow: var(--shadow);
   position: relative;
   overflow: hidden;
+
+　background-image: url("../img/hero.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  overflow: hidden;
 }
 .hero:before{
   content:"";
